--- a/index.html
+++ b/index.html
@@ -10,7 +10,23 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div class="container-fluid">
+        <div class="row">
+            <h1>Problem Statement and Motivation</h1>
+        </div>
+        <div class="row">
+            <h1>Introduction and Description of Data</h1>
+        </div>
+        <div class="row">
+            <h1>Literature Review and Related Work</h1>
+        </div>
+        <div class="row">
+            <h1>Modelling Approach and Project Trajectory</h1>
+        </div>
+        <div class="row">
+            <h1>Results, Conclusions, and Future Work</h1>
+        </div>
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
